# kody

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: UI_SPEC.md  electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/src/main/: index.ts  ipc.test.ts  ipc.ts  provider-settings.test.ts  provider-settings.ts  security.test.ts  security.ts  server-manager.test.ts  server-manager.ts  update-manager.test.ts  update-manager.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.test.tsx  App.tsx  index.html  main.tsx  styles.css
apps/desktop/src/renderer/components/: ArtifactCard.tsx  AssetRail.test.tsx  AssetRail.tsx  BackgroundProcesses.test.tsx  BackgroundProcesses.tsx  Composer.test.tsx  Composer.tsx  Conversation.test.tsx  Conversation.tsx  CreateThreadDialog.tsx  DraftConversation.tsx  ImageComposer.tsx  ImageGeneration.test.tsx  Inspector.tsx  KodySelect.tsx  MentionPalette.tsx  ProjectShelf.tsx  ProviderSettings.test.tsx  ProviderSettings.tsx  ReferenceChips.test.tsx  ReferenceChips.tsx  SidebarResizeHandle.test.tsx  SidebarResizeHandle.tsx  ThreadContextCard.test.tsx  ThreadContextCard.tsx  TitleBar.test.tsx  TitleBar.tsx  ToolActivity.tsx  UpdateIndicator.test.tsx  UpdateIndicator.tsx  kody-select.css  provider-settings.css
apps/desktop/src/renderer/lib/: mockBridge.test.ts  mockBridge.ts  processes.test.ts  processes.ts  references.test.ts  references.ts  sidebarSizing.test.ts  sidebarSizing.ts  threadContext.test.ts  threadContext.ts  threadProjection.test.ts  threadProjection.ts
apps/desktop/src/shared/: bridge.ts  protocol.ts
apps/desktop/tests/e2e/: desktop.smoke.spec.ts
crates/cody-app-server/: Cargo.toml
crates/cody-app-server/src/: codex_backend.rs  lib.rs  main.rs  rpc.rs  server.rs
crates/cody-app-server/src/codex/: client.rs  discovery.rs  mod.rs  redaction.rs  tests.rs  types.rs
crates/cody-app-server/tests/: codex_execution_live.rs  network_boundary.rs  provider_rpc.rs
crates/cody-core/: Cargo.toml
crates/cody-core/examples/: custom_provider.rs
crates/cody-core/src/: context.rs  domain.rs  engine.rs  error.rs  event.rs  lib.rs  process.rs  runtime.rs  store.rs  title.rs  user_input.rs
crates/cody-core/src/provider/: echo.rs  metadata.rs  mod.rs  openai_compatible.rs  openai_responses.rs  scripted.rs  types.rs
crates/cody-core/src/tools/: builtins.rs  mod.rs  processes.rs
crates/cody-core/tests/: agent_loop.rs  user_input.rs
crates/kody-app-server/: Cargo.toml  README.md
crates/kody-app-server/src/: codex_backend.rs  lib.rs  main.rs  rpc.rs  server.rs
crates/kody-app-server/src/codex/: client.rs  discovery.rs  error.rs  mod.rs  tests.rs  types.rs
crates/kody-app-server/tests/: codex_execution_live.rs  network_boundary.rs  provider_rpc.rs
crates/kody-core/: Cargo.toml  README.md
crates/kody-core/examples/: custom_provider.rs
crates/kody-core/src/: context.rs  domain.rs  engine.rs  error.rs  image.rs  lib.rs  process.rs  runtime.rs  store.rs  title.rs  user_input.rs
crates/kody-core/src/provider/: metadata.rs  mod.rs  openai_compatible.rs  openai_responses.rs  scripted.rs  types.rs
crates/kody-core/src/tools/: builtins.rs  mod.rs  processes.rs
crates/kody-core/tests/: agent_loop.rs  user_input.rs
docs/: README.md  app-server-protocol.md  architecture.md  development.md  releasing.md
scripts/: check-markdown-links.mjs  generate-macos-icon.sh  merge-mac-update-metadata.rb  merge-mac-update-metadata_test.rb  release-macos.sh
