[workspace]
members = [
    "crates/kody-core",
    "crates/kody-app-server",
]
resolver = "2"

[workspace.package]
version = "0.1.14"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
authors = ["Kody contributors"]
homepage = "https://github.com/jianliang00/kody"
repository = "https://github.com/jianliang00/kody"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }
