[package]
name = "kody-app-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Authenticated JSON-RPC App Server and Codex integration for the Kody coding agent"
readme = "README.md"
keywords = ["agent", "coding-agent", "json-rpc", "websocket"]
categories = ["development-tools", "web-programming::http-server"]
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
kody-core = { path = "../kody-core" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
tokio-tungstenite = "0.29"
